apps/PiHole/base/00-pihole-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
      - name: pihole
        image: pihole/pihole:2021.12.1
        ports:
          - containerPort: 80 
          - containerPort: 53
          - containerPort: 67
        securityContext:
          capabilities:
            add:
              - NET_ADMIN
        volumeMounts:
          - mountPath: "/etc/pihole"
            name: pihole-etc
          - mountPath: "/etc/dnsmasq.d"
            name: dnsmasq-etc

      volumes:
        - name: pihole-etc
          persistentVolumeClaim:
            claimName: pihole-etc
        - name: dnsmasq-etc
          persistentVolumeClaim:
            claimName: pihole-dnsmasq-etc
