apps/PiHole/base/01-pihole-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    spec:
      containers:
      - name: pihole
        image: pihole/pihole:2021.12.1
        ports:
          - containerPort: 80 
          - containerPort: 53
          - containerPort: 67
        securityContext:
          capabilities:
            add:
              - NET_ADMIN
