apps/PiHole/base/03-pihole-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-lb
spec:
  selector:
    app: pihole
  type: ClusterIP
  ports:
    - name: dns
      port: 53
      targetPort: 53
    - name: dhcp
      port: 67
      targetPort: 67
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-svc
spec:
  selector:
    app: pihole
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      targetPort: 443
